@@ -58,12 +58,9 @@ function flib_data_util.create_icons(prototype, new_layers)
   if prototype.icons then
     local icons ={}
     for _, v in pairs(prototype.icons) do
-      -- assume every other mod is lacking full prototype definitions
-      icons[#icons+1] = {
-        icon = v.icon,
-        icon_size = v.icon_size or prototype.icon_size or 32,
-        tint = v.tint
-      }
+      local sub_icon = table.deepcopy(v)
+      sub_icon.icon_size = v.icon_size or prototype.icon_size
+      icons[#icons+1] = sub_icon
     end
     if new_layers then
       for _, new_layer in pairs(new_layers) do
