@@ -15,6 +15,7 @@ Date: 2021-02-12
     - Significant performance improvements to `gui-beta.build()`
   Bugfixes:
     - Fixed `math.max_uint` being one number too large
+    - Fixed `data-util.create_icons()` not using all of the icon specifications
 ---------------------------------------------------------------------------------------------------
 Version: 0.6.1
 Date: 2021-01-02
